-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 23
-
Component/s: hotspot
-
b20
-
Verified
Test: serviceability/jvmti/vthread/SuspendResume1/SuspendResume1.java#default
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9972/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f4e45e3b-1f8b-4f99-b17a-520587943eb1/runs/68a47ad9-1a30-4992-a72f-7359cd5ff720/workspace/open/src/hotspot/share/prims/jvmtiEnvBase.cpp:2079), pid=3913089, tid=3913305
# assert(_target_jt == nullptr || _target_jt->vthread() == target_h()) failed: sanity check
#
# JRE version: Java(TM) SE Runtime Environment (23.0+19) (fastdebug build 23-ea+19-1517)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-ea+19-1517, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1158c87] GetSingleStackTraceClosure::do_vthread(Handle)+0xa7
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/412fde1c-3e26-4c3d-b41e-bab008e2c85d-S26213/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c9c04003-deea-49fa-8af6-0a146474eeaf/runs/48548484-76fd-4e13-99a6-ebe36f3629d7/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_serviceability/scratch/4/core.3913089)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x00007fe0d80363c0): JavaThread "ForkJoinPool-1-worker-1" daemon [_thread_in_vm, id=3913305, stack(0x00007fe155afc000,0x00007fe155bfc000) (1024K)]
Stack: [0x00007fe155afc000,0x00007fe155bfc000], sp=0x00007fe155bf7130, free space=1004k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1158c87] GetSingleStackTraceClosure::do_vthread(Handle)+0xa7 (jvmtiEnvBase.cpp:2079)
V [libjvm.so+0xd7e987] HandshakeOperation::do_handshake(JavaThread*)+0x47 (handshake.cpp:326)
V [libjvm.so+0xd7ebb1] HandshakeState::process_by_self(bool, bool)+0x141 (handshake.cpp:577)
V [libjvm.so+0x15c5d65] SafepointMechanism::process(JavaThread*, bool, bool)+0x65 (safepointMechanism.cpp:159)
V [libjvm.so+0x15c0ed2] ThreadSafepointState::handle_polling_page_exception()+0x8a2 (safepointMechanism.inline.hpp:83)
V [libjvm.so+0x15c148b] SafepointSynchronize::handle_polling_page_exception(JavaThread*)+0xab (safepoint.cpp:620)
v ~SafepointBlob 0x00007fe16bf4617b
J 5536 c2 java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.offer(Ljava/lang/Runnable;)Z java.base@23-ea (123 bytes) @ 0x00007fe16caf68c8 [0x00007fe16caf66e0+0x00000000000001e8]
J 5443 c2 java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.add(Ljava/lang/Object;)Z java.base@23-ea (9 bytes) @ 0x00007fe16cadbd7c [0x00007fe16cadbd20+0x000000000000005c]
J 5281 c2 java.util.concurrent.ScheduledThreadPoolExecutor.delayedExecute(Ljava/util/concurrent/RunnableScheduledFuture;)V java.base@23-ea (58 bytes) @ 0x00007fe16caada7c [0x00007fe16caad9e0+0x000000000000009c]
J 5507 c2 java.util.concurrent.ScheduledThreadPoolExecutor.schedule(Ljava/lang/Runnable;JLjava/util/concurrent/TimeUnit;)Ljava/util/concurrent/ScheduledFuture; java.base@23-ea (56 bytes) @ 0x00007fe16caec988 [0x00007fe16caec660+0x0000000000000328]
J 5504 c2 java.lang.VirtualThread.scheduleUnpark(J)Ljava/util/concurrent/Future; java.base@23-ea (61 bytes) @ 0x00007fe16caebae4 [0x00007fe16caeb9e0+0x0000000000000104]
J 5239 c2 java.lang.VirtualThread.parkNanos(J)V java.base@23-ea (255 bytes) @ 0x00007fe16caa502c [0x00007fe16caa4f80+0x00000000000000ac]
J 5235 c2 java.lang.VirtualThread.sleepNanos(J)V java.base@23-ea (119 bytes) @ 0x00007fe16caa3c68 [0x00007fe16caa3bc0+0x00000000000000a8]
J 5182 c2 java.lang.Thread.sleepNanos(J)V java.base@23-ea (53 bytes) @ 0x00007fe16ca97518 [0x00007fe16ca974c0+0x0000000000000058]
J 5178 c2 java.lang.Thread.sleep(J)V java.base@23-ea (29 bytes) @ 0x00007fe16ca94c44 [0x00007fe16ca94c00+0x0000000000000044]
J 5233 c2 SuspendResume1.sleep(J)V (26 bytes) @ 0x00007fe16caa3820 [0x00007fe16caa3800+0x0000000000000020]
J 5231% c2 TestedThread.run()V (51 bytes) @ 0x00007fe16caa33ac [0x00007fe16caa3320+0x000000000000008c]
J 1586 jdk.internal.vm.Continuation.enterSpecial(Ljdk/internal/vm/Continuation;ZZ)V java.base@23-ea (0 bytes) @ 0x00007fe16c5bb293 [0x00007fe16c5bb120+0x0000000000000173]
J 5214 c2 jdk.internal.vm.Continuation.run()V java.base@23-ea (586 bytes) @ 0x00007fe16ca9ea64 [0x00007fe16ca9e540+0x0000000000000524]
J 5207 c2 java.lang.VirtualThread.runContinuation()V java.base@23-ea (132 bytes) @ 0x00007fe16ca9c0dc [0x00007fe16ca9c000+0x00000000000000dc]
J 5206 c2 java.lang.VirtualThread$$Lambda+0x00007fe10704eef8.run()V java.base@23-ea (8 bytes) @ 0x00007fe16ca9bc3c [0x00007fe16ca9bc00+0x000000000000003c]
J 5603 c2 java.util.concurrent.ForkJoinTask$InterruptibleTask.exec()Z java.base@23-ea (84 bytes) @ 0x00007fe16cb0c2e8 [0x00007fe16cb0c0a0+0x0000000000000248]
J 5601 c2 java.util.concurrent.ForkJoinPool$WorkQueue.topLevelExec(Ljava/util/concurrent/ForkJoinTask;Ljava/util/concurrent/ForkJoinPool$WorkQueue;I)V java.base@23-ea (93 bytes) @ 0x00007fe16cb0b678 [0x00007fe16cb0b540+0x0000000000000138]
J 5598 c2 java.util.concurrent.ForkJoinPool.scan(Ljava/util/concurrent/ForkJoinPool$WorkQueue;JI)J java.base@23-ea (301 bytes) @ 0x00007fe16cb097fc [0x00007fe16cb09640+0x00000000000001bc]
J 5183 c1 java.util.concurrent.ForkJoinPool.runWorker(Ljava/util/concurrent/ForkJoinPool$WorkQueue;)V java.base@23-ea (88 bytes) @ 0x00007fe165402e3c [0x00007fe165402d40+0x00000000000000fc]
J 5174 c1 java.util.concurrent.ForkJoinWorkerThread.run()V java.base@23-ea (180 bytes) @ 0x00007fe1653fe57c [0x00007fe1653fe360+0x000000000000021c]
v ~StubRoutines::call_stub 0x00007fe16be28d01
V [libjvm.so+0xe4d039] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x4a9 (javaCalls.cpp:415)
V [libjvm.so+0xe4d6fc] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x34c (javaCalls.cpp:329)
V [libjvm.so+0xe4d916] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, JavaThread*)+0x76 (javaCalls.cpp:191)
V [libjvm.so+0xfbab13] thread_entry(JavaThread*, JavaThread*)+0x93 (jvm.cpp:2937)
V [libjvm.so+0xe831fc] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:759)
V [libjvm.so+0x178f526] Thread::call_run()+0xb6 (thread.cpp:221)
V [libjvm.so+0x147b8f7] thread_native_entry(Thread*)+0x127 (os_linux.cpp:846)
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~SafepointBlob 0x00007fe16bf4617b
J 5536 c2 java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.offer(Ljava/lang/Runnable;)Z java.base@23-ea (123 bytes) @ 0x00007fe16caf68c8 [0x00007fe16caf66e0+0x00000000000001e8]
J 5443 c2 java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.add(Ljava/lang/Object;)Z java.base@23-ea (9 bytes) @ 0x00007fe16cadbd7c [0x00007fe16cadbd20+0x000000000000005c]
J 5281 c2 java.util.concurrent.ScheduledThreadPoolExecutor.delayedExecute(Ljava/util/concurrent/RunnableScheduledFuture;)V java.base@23-ea (58 bytes) @ 0x00007fe16caada7c [0x00007fe16caad9e0+0x000000000000009c]
J 5507 c2 java.util.concurrent.ScheduledThreadPoolExecutor.schedule(Ljava/lang/Runnable;JLjava/util/concurrent/TimeUnit;)Ljava/util/concurrent/ScheduledFuture; java.base@23-ea (56 bytes) @ 0x00007fe16caec988 [0x00007fe16caec660+0x0000000000000328]
J 5504 c2 java.lang.VirtualThread.scheduleUnpark(J)Ljava/util/concurrent/Future; java.base@23-ea (61 bytes) @ 0x00007fe16caebae4 [0x00007fe16caeb9e0+0x0000000000000104]
J 5239 c2 java.lang.VirtualThread.parkNanos(J)V java.base@23-ea (255 bytes) @ 0x00007fe16caa502c [0x00007fe16caa4f80+0x00000000000000ac]
J 5235 c2 java.lang.VirtualThread.sleepNanos(J)V java.base@23-ea (119 bytes) @ 0x00007fe16caa3c68 [0x00007fe16caa3bc0+0x00000000000000a8]
J 5182 c2 java.lang.Thread.sleepNanos(J)V java.base@23-ea (53 bytes) @ 0x00007fe16ca97518 [0x00007fe16ca974c0+0x0000000000000058]
J 5178 c2 java.lang.Thread.sleep(J)V java.base@23-ea (29 bytes) @ 0x00007fe16ca94c44 [0x00007fe16ca94c00+0x0000000000000044]
J 5233 c2 SuspendResume1.sleep(J)V (26 bytes) @ 0x00007fe16caa3820 [0x00007fe16caa3800+0x0000000000000020]
J 5231% c2 TestedThread.run()V (51 bytes) @ 0x00007fe16caa33ac [0x00007fe16caa3320+0x000000000000008c]
J 1586 jdk.internal.vm.Continuation.enterSpecial(Ljdk/internal/vm/Continuation;ZZ)V java.base@23-ea (0 bytes) @ 0x00007fe16c5bb293 [0x00007fe16c5bb120+0x0000000000000173]
J 5214 c2 jdk.internal.vm.Continuation.run()V java.base@23-ea (586 bytes) @ 0x00007fe16ca9ea64 [0x00007fe16ca9e540+0x0000000000000524]
J 5207 c2 java.lang.VirtualThread.runContinuation()V java.base@23-ea (132 bytes) @ 0x00007fe16ca9c0dc [0x00007fe16ca9c000+0x00000000000000dc]
J 5206 c2 java.lang.VirtualThread$$Lambda+0x00007fe10704eef8.run()V java.base@23-ea (8 bytes) @ 0x00007fe16ca9bc3c [0x00007fe16ca9bc00+0x000000000000003c]
J 5603 c2 java.util.concurrent.ForkJoinTask$InterruptibleTask.exec()Z java.base@23-ea (84 bytes) @ 0x00007fe16cb0c2e8 [0x00007fe16cb0c0a0+0x0000000000000248]
J 5601 c2 java.util.concurrent.ForkJoinPool$WorkQueue.topLevelExec(Ljava/util/concurrent/ForkJoinTask;Ljava/util/concurrent/ForkJoinPool$WorkQueue;I)V java.base@23-ea (93 bytes) @ 0x00007fe16cb0b678 [0x00007fe16cb0b540+0x0000000000000138]
J 5598 c2 java.util.concurrent.ForkJoinPool.scan(Ljava/util/concurrent/ForkJoinPool$WorkQueue;JI)J java.base@23-ea (301 bytes) @ 0x00007fe16cb097fc [0x00007fe16cb09640+0x00000000000001bc]
J 5183 c1 java.util.concurrent.ForkJoinPool.runWorker(Ljava/util/concurrent/ForkJoinPool$WorkQueue;)V java.base@23-ea (88 bytes) @ 0x00007fe165402e3c [0x00007fe165402d40+0x00000000000000fc]
J 5174 c1 java.util.concurrent.ForkJoinWorkerThread.run()V java.base@23-ea (180 bytes) @ 0x00007fe1653fe57c [0x00007fe1653fe360+0x000000000000021c]
v ~StubRoutines::call_stub 0x00007fe16be28d01
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9972/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f4e45e3b-1f8b-4f99-b17a-520587943eb1/runs/68a47ad9-1a30-4992-a72f-7359cd5ff720/workspace/open/src/hotspot/share/prims/jvmtiEnvBase.cpp:2079), pid=3913089, tid=3913305
# assert(_target_jt == nullptr || _target_jt->vthread() == target_h()) failed: sanity check
#
# JRE version: Java(TM) SE Runtime Environment (23.0+19) (fastdebug build 23-ea+19-1517)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-ea+19-1517, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1158c87] GetSingleStackTraceClosure::do_vthread(Handle)+0xa7
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/412fde1c-3e26-4c3d-b41e-bab008e2c85d-S26213/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c9c04003-deea-49fa-8af6-0a146474eeaf/runs/48548484-76fd-4e13-99a6-ebe36f3629d7/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_serviceability/scratch/4/core.3913089)
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x00007fe0d80363c0): JavaThread "ForkJoinPool-1-worker-1" daemon [_thread_in_vm, id=3913305, stack(0x00007fe155afc000,0x00007fe155bfc000) (1024K)]
Stack: [0x00007fe155afc000,0x00007fe155bfc000], sp=0x00007fe155bf7130, free space=1004k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1158c87] GetSingleStackTraceClosure::do_vthread(Handle)+0xa7 (jvmtiEnvBase.cpp:2079)
V [libjvm.so+0xd7e987] HandshakeOperation::do_handshake(JavaThread*)+0x47 (handshake.cpp:326)
V [libjvm.so+0xd7ebb1] HandshakeState::process_by_self(bool, bool)+0x141 (handshake.cpp:577)
V [libjvm.so+0x15c5d65] SafepointMechanism::process(JavaThread*, bool, bool)+0x65 (safepointMechanism.cpp:159)
V [libjvm.so+0x15c0ed2] ThreadSafepointState::handle_polling_page_exception()+0x8a2 (safepointMechanism.inline.hpp:83)
V [libjvm.so+0x15c148b] SafepointSynchronize::handle_polling_page_exception(JavaThread*)+0xab (safepoint.cpp:620)
v ~SafepointBlob 0x00007fe16bf4617b
J 5536 c2 java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.offer(Ljava/lang/Runnable;)Z java.base@23-ea (123 bytes) @ 0x00007fe16caf68c8 [0x00007fe16caf66e0+0x00000000000001e8]
J 5443 c2 java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.add(Ljava/lang/Object;)Z java.base@23-ea (9 bytes) @ 0x00007fe16cadbd7c [0x00007fe16cadbd20+0x000000000000005c]
J 5281 c2 java.util.concurrent.ScheduledThreadPoolExecutor.delayedExecute(Ljava/util/concurrent/RunnableScheduledFuture;)V java.base@23-ea (58 bytes) @ 0x00007fe16caada7c [0x00007fe16caad9e0+0x000000000000009c]
J 5507 c2 java.util.concurrent.ScheduledThreadPoolExecutor.schedule(Ljava/lang/Runnable;JLjava/util/concurrent/TimeUnit;)Ljava/util/concurrent/ScheduledFuture; java.base@23-ea (56 bytes) @ 0x00007fe16caec988 [0x00007fe16caec660+0x0000000000000328]
J 5504 c2 java.lang.VirtualThread.scheduleUnpark(J)Ljava/util/concurrent/Future; java.base@23-ea (61 bytes) @ 0x00007fe16caebae4 [0x00007fe16caeb9e0+0x0000000000000104]
J 5239 c2 java.lang.VirtualThread.parkNanos(J)V java.base@23-ea (255 bytes) @ 0x00007fe16caa502c [0x00007fe16caa4f80+0x00000000000000ac]
J 5235 c2 java.lang.VirtualThread.sleepNanos(J)V java.base@23-ea (119 bytes) @ 0x00007fe16caa3c68 [0x00007fe16caa3bc0+0x00000000000000a8]
J 5182 c2 java.lang.Thread.sleepNanos(J)V java.base@23-ea (53 bytes) @ 0x00007fe16ca97518 [0x00007fe16ca974c0+0x0000000000000058]
J 5178 c2 java.lang.Thread.sleep(J)V java.base@23-ea (29 bytes) @ 0x00007fe16ca94c44 [0x00007fe16ca94c00+0x0000000000000044]
J 5233 c2 SuspendResume1.sleep(J)V (26 bytes) @ 0x00007fe16caa3820 [0x00007fe16caa3800+0x0000000000000020]
J 5231% c2 TestedThread.run()V (51 bytes) @ 0x00007fe16caa33ac [0x00007fe16caa3320+0x000000000000008c]
J 1586 jdk.internal.vm.Continuation.enterSpecial(Ljdk/internal/vm/Continuation;ZZ)V java.base@23-ea (0 bytes) @ 0x00007fe16c5bb293 [0x00007fe16c5bb120+0x0000000000000173]
J 5214 c2 jdk.internal.vm.Continuation.run()V java.base@23-ea (586 bytes) @ 0x00007fe16ca9ea64 [0x00007fe16ca9e540+0x0000000000000524]
J 5207 c2 java.lang.VirtualThread.runContinuation()V java.base@23-ea (132 bytes) @ 0x00007fe16ca9c0dc [0x00007fe16ca9c000+0x00000000000000dc]
J 5206 c2 java.lang.VirtualThread$$Lambda+0x00007fe10704eef8.run()V java.base@23-ea (8 bytes) @ 0x00007fe16ca9bc3c [0x00007fe16ca9bc00+0x000000000000003c]
J 5603 c2 java.util.concurrent.ForkJoinTask$InterruptibleTask.exec()Z java.base@23-ea (84 bytes) @ 0x00007fe16cb0c2e8 [0x00007fe16cb0c0a0+0x0000000000000248]
J 5601 c2 java.util.concurrent.ForkJoinPool$WorkQueue.topLevelExec(Ljava/util/concurrent/ForkJoinTask;Ljava/util/concurrent/ForkJoinPool$WorkQueue;I)V java.base@23-ea (93 bytes) @ 0x00007fe16cb0b678 [0x00007fe16cb0b540+0x0000000000000138]
J 5598 c2 java.util.concurrent.ForkJoinPool.scan(Ljava/util/concurrent/ForkJoinPool$WorkQueue;JI)J java.base@23-ea (301 bytes) @ 0x00007fe16cb097fc [0x00007fe16cb09640+0x00000000000001bc]
J 5183 c1 java.util.concurrent.ForkJoinPool.runWorker(Ljava/util/concurrent/ForkJoinPool$WorkQueue;)V java.base@23-ea (88 bytes) @ 0x00007fe165402e3c [0x00007fe165402d40+0x00000000000000fc]
J 5174 c1 java.util.concurrent.ForkJoinWorkerThread.run()V java.base@23-ea (180 bytes) @ 0x00007fe1653fe57c [0x00007fe1653fe360+0x000000000000021c]
v ~StubRoutines::call_stub 0x00007fe16be28d01
V [libjvm.so+0xe4d039] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x4a9 (javaCalls.cpp:415)
V [libjvm.so+0xe4d6fc] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x34c (javaCalls.cpp:329)
V [libjvm.so+0xe4d916] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, JavaThread*)+0x76 (javaCalls.cpp:191)
V [libjvm.so+0xfbab13] thread_entry(JavaThread*, JavaThread*)+0x93 (jvm.cpp:2937)
V [libjvm.so+0xe831fc] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:759)
V [libjvm.so+0x178f526] Thread::call_run()+0xb6 (thread.cpp:221)
V [libjvm.so+0x147b8f7] thread_native_entry(Thread*)+0x127 (os_linux.cpp:846)
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~SafepointBlob 0x00007fe16bf4617b
J 5536 c2 java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.offer(Ljava/lang/Runnable;)Z java.base@23-ea (123 bytes) @ 0x00007fe16caf68c8 [0x00007fe16caf66e0+0x00000000000001e8]
J 5443 c2 java.util.concurrent.ScheduledThreadPoolExecutor$DelayedWorkQueue.add(Ljava/lang/Object;)Z java.base@23-ea (9 bytes) @ 0x00007fe16cadbd7c [0x00007fe16cadbd20+0x000000000000005c]
J 5281 c2 java.util.concurrent.ScheduledThreadPoolExecutor.delayedExecute(Ljava/util/concurrent/RunnableScheduledFuture;)V java.base@23-ea (58 bytes) @ 0x00007fe16caada7c [0x00007fe16caad9e0+0x000000000000009c]
J 5507 c2 java.util.concurrent.ScheduledThreadPoolExecutor.schedule(Ljava/lang/Runnable;JLjava/util/concurrent/TimeUnit;)Ljava/util/concurrent/ScheduledFuture; java.base@23-ea (56 bytes) @ 0x00007fe16caec988 [0x00007fe16caec660+0x0000000000000328]
J 5504 c2 java.lang.VirtualThread.scheduleUnpark(J)Ljava/util/concurrent/Future; java.base@23-ea (61 bytes) @ 0x00007fe16caebae4 [0x00007fe16caeb9e0+0x0000000000000104]
J 5239 c2 java.lang.VirtualThread.parkNanos(J)V java.base@23-ea (255 bytes) @ 0x00007fe16caa502c [0x00007fe16caa4f80+0x00000000000000ac]
J 5235 c2 java.lang.VirtualThread.sleepNanos(J)V java.base@23-ea (119 bytes) @ 0x00007fe16caa3c68 [0x00007fe16caa3bc0+0x00000000000000a8]
J 5182 c2 java.lang.Thread.sleepNanos(J)V java.base@23-ea (53 bytes) @ 0x00007fe16ca97518 [0x00007fe16ca974c0+0x0000000000000058]
J 5178 c2 java.lang.Thread.sleep(J)V java.base@23-ea (29 bytes) @ 0x00007fe16ca94c44 [0x00007fe16ca94c00+0x0000000000000044]
J 5233 c2 SuspendResume1.sleep(J)V (26 bytes) @ 0x00007fe16caa3820 [0x00007fe16caa3800+0x0000000000000020]
J 5231% c2 TestedThread.run()V (51 bytes) @ 0x00007fe16caa33ac [0x00007fe16caa3320+0x000000000000008c]
J 1586 jdk.internal.vm.Continuation.enterSpecial(Ljdk/internal/vm/Continuation;ZZ)V java.base@23-ea (0 bytes) @ 0x00007fe16c5bb293 [0x00007fe16c5bb120+0x0000000000000173]
J 5214 c2 jdk.internal.vm.Continuation.run()V java.base@23-ea (586 bytes) @ 0x00007fe16ca9ea64 [0x00007fe16ca9e540+0x0000000000000524]
J 5207 c2 java.lang.VirtualThread.runContinuation()V java.base@23-ea (132 bytes) @ 0x00007fe16ca9c0dc [0x00007fe16ca9c000+0x00000000000000dc]
J 5206 c2 java.lang.VirtualThread$$Lambda+0x00007fe10704eef8.run()V java.base@23-ea (8 bytes) @ 0x00007fe16ca9bc3c [0x00007fe16ca9bc00+0x000000000000003c]
J 5603 c2 java.util.concurrent.ForkJoinTask$InterruptibleTask.exec()Z java.base@23-ea (84 bytes) @ 0x00007fe16cb0c2e8 [0x00007fe16cb0c0a0+0x0000000000000248]
J 5601 c2 java.util.concurrent.ForkJoinPool$WorkQueue.topLevelExec(Ljava/util/concurrent/ForkJoinTask;Ljava/util/concurrent/ForkJoinPool$WorkQueue;I)V java.base@23-ea (93 bytes) @ 0x00007fe16cb0b678 [0x00007fe16cb0b540+0x0000000000000138]
J 5598 c2 java.util.concurrent.ForkJoinPool.scan(Ljava/util/concurrent/ForkJoinPool$WorkQueue;JI)J java.base@23-ea (301 bytes) @ 0x00007fe16cb097fc [0x00007fe16cb09640+0x00000000000001bc]
J 5183 c1 java.util.concurrent.ForkJoinPool.runWorker(Ljava/util/concurrent/ForkJoinPool$WorkQueue;)V java.base@23-ea (88 bytes) @ 0x00007fe165402e3c [0x00007fe165402d40+0x00000000000000fc]
J 5174 c1 java.util.concurrent.ForkJoinWorkerThread.run()V java.base@23-ea (180 bytes) @ 0x00007fe1653fe57c [0x00007fe1653fe360+0x000000000000021c]
v ~StubRoutines::call_stub 0x00007fe16be28d01
- relates to
-
JDK-8329491 GetThreadListStackTraces function should use JvmtiHandshake
-
- Resolved
-