8330303: Crash: assert(_target_jt == nullptr || _target_jt->vthread() == target_h()) failed